# esmtools_staccatalog

./: .gitignore  README.md  build_catalog.py  experiments.json  experiments.py  make_yaml_experiment.py  pyproject.toml  stac_api.py  stac_browser.py  validate_catalog.py
.claude/: settings.local.json
catalog/: catalog.json  stac_browser.py
catalog/basic-001/: catalog.json
catalog/basic-001/fesom/: 0c77bf10-ssh.fesom.185002.01.json  13a7d9d3-sst.fesom.185001.01.json  16aae0f2-m_snow.fesom.185002.01.json  27dd7b4e-MLD2.fesom.185002.01.json  291ba97a-ssh.fesom.185001.01.json  2aa9510b-tx_sur.fesom.185001.01.json  392b6f02-vice.fesom.185001.01.json  3e5bd6b0-sss.fesom.185001.01.json  3f10a8aa-tx_sur.fesom.185003.01.json  (+70 more)
catalog/basic-002/: catalog.json
catalog/branchoff-002/: catalog.json
catalog/echam-standalone-004/: catalog.json
catalog/echam-standalone-006/: catalog.json
catalog/garfield-001/: catalog.json
catalog/garfield-002/: catalog.json
catalog/sylvester-001/: catalog.json
catalog/sylvester-002/: catalog.json
catalog/sylvester-003/: catalog.json
catalog/sylvester-004/: catalog.json
catalog/sylvester-005/: catalog.json
catalog/sylvester-006/: catalog.json
catalog/sylvester-007/: catalog.json
catalog/sylvester-008/: catalog.json
catalog/sylvester-010/: catalog.json
catalog/sylvester-011/: catalog.json
old/: build_catalog.py  stac_api.py  start_stac_api.sh  start_stac_browser.sh
old/snakemake_example/: Snakefile  config.yaml
src/esm_catalog/: __init__.py  build.py  cli.py  extract.py  finalize.py  serve.py  validate.py
(+2249 files in other folders)
